fixed x overflow

--- a/menus/static/menus/index.css
+++ b/menus/static/menus/index.css
@@ -178,14 +178,6 @@ img.item-image {
     justify-content: center;
     color: var(--accent-color);
     background: var(--light-background);
-    /* background: var(--light-purple); */
-    /* background: radial-gradient(
-        ellipse at center,
-        rgba(220, 195, 255, 0.9) 0%,
-        rgba(226, 210, 250, 0.9) 50%,
-        rgba(201, 167, 248, 0) 100%
-        );
-     */
     border: none;
     font-weight: bold;
 }
@@ -378,8 +370,8 @@ span.item-name {
     padding: 20px;
     font-size: 20px;
     box-sizing: border-box;
-    max-width: 100vw;
-    min-width: 360px;
+    max-width: 100%;
+    /* min-width: 360px; */
 }
 
 .benefits > ol {
